--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
     - docker
 
 before_install:
-    - docker build -t app . && docker run -it --init -p 4000:4000 app
+    - docker build -t Aguns/AgnusCrm.Api .
 
 script:
-    - docker run fhsinchy/deno-blog test --allow-env tests/version.test.ts
+    - docker run Aguns/AgnusCrm.Api test --allow-env tests/version.test.ts
 
 
 deploy:
