update aws data

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ script:
 deploy:
     provider: elasticbeanstalk
     region: "us-west-2"
-    app: "agnus-api"
-    env: "AgnusApi-env"
+    app: "agnusapi"
+    env: "Agnusapi-env"
     bucket_name: "elasticbeanstalk-us-west-2-281401968496"
-    bucket_path: "agnus-api"
+    bucket_path: "agnusapi"
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: "$AWS_SECRET_ACCESS_KEY"
     on:
