--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,12 @@
 sudo: required
 
-services:
-    - docker
-
-before_install:
-    - docker build -t app .
-
 script:
-    - docker run app test --allow-env tests/version.test.ts
+    - deno run app test --allow-env tests/version.test.ts
  
 deploy:
     provider: heroku
     api_key:
-        secure: "$HEROKU_ACCESS_KEY_ID"
+        secure: $HEROKU_AUTH_TOKEN
+    app: agnusapi
     on:
         branch: master
