--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
 sudo: required
 
+services:
+    - docker
+
+before_install:
+    - docker build -t app .
+
 script:
-    - deno run app test --allow-env tests/version.test.ts
+    - docker run app test --allow-env tests/version.test.ts
  
 deploy:
     provider: heroku
